app_nginx/deployment2.yaml
# deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 4 
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-persistent-storage
          mountPath: /usr/share/nginx/html
        - name: var-sigadaer
          mountPath: /var/sigadaer
      volumes:
      - name: nginx-persistent-storage
        persistentVolumeClaim:
          claimName: pv0001-claim
      - name: var-sigadaer
        configMap:
          name: nginx-configmap
