app_nginx/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    app: nginx
  annotations:
    metallb.universe.tf/address-pool: default
spec:
  type: LoadBalancer
  ports:
    - targetPort: 80
      port: 80
      name: http
  selector:
    app: nginx
