app_nginx/ingress_http.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    app: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: www.meusite.com
      http:
        paths:
          - backend:
              serviceName: nginx-service
              servicePort: 80
            path: /
